--- a/eshop-frontend-app/src/index.html
+++ b/eshop-frontend-app/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>EshopFrontendApp</title>
+  <title>ShopFrontendApp</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <script>
+    if (global === undefined) {
+      var global = window;
+    }
+  </script>
 </head>
 <body>
 <app-root></app-root>
